[gd_scene load_steps=2 format=3 uid="uid://blt40x8rvdb4w"]

[ext_resource type="Script" path="res://addons/dialoguecreator/Scripts/Nodes/DCCharacterNode.gd" id="1_ujftc"]

[node name="ActionNode" type="GraphNode"]
offset_right = 338.0
offset_bottom = 397.0
resizable = true
title = "Character"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.803922, 1, 0.52549, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_ujftc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Character ID: "

[node name="CharacterID" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
max_value = 1e+06
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name: "

[node name="CharacterNameLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharactersItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_columns = 80
same_column_width = true
fixed_icon_size = Vector2i(128, 128)
